order change for mic project

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "vendor": "federacioncf",
+  "vendor": "micco",
   "name": "free-shipping",
   "version": "0.0.1",
   "title": "BlackSip store components custom",
